--- a/biosite/package.json
+++ b/biosite/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.75.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "ogl": "^1.0.11",
