--- a/biosite/package.json
+++ b/biosite/package.json
@@ -22,6 +22,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "recharts": "^3.2.1",
     "stripe": "^19.1.0",
