--- a/biosite/package.json
+++ b/biosite/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "lucide-react": "^0.545.0",
+    "motion": "^12.23.24",
     "next": "15.5.4",
     "ogl": "^1.0.11",
     "react": "19.1.0",
