--- a/biosite/package.json
+++ b/biosite/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "@stripe/stripe-js": "^8.0.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
@@ -27,6 +29,7 @@
     "react-intersection-observer": "^9.16.0",
     "recharts": "^3.2.1",
     "stripe": "^19.1.0",
+    "three": "^0.180.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
